--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
 	body {
-		@apply bg-[#141414] text-white  scrollbar-thin scrollbar-track-[transparent] scrollbar-thumb-[red];
+		@apply bg-[#141414] text-white  scrollbar-thin scrollbar-track-[transparent] scrollbar-thumb-[red] w-full overflow-x-hidden;
 	}
 
 	header {
